9 December 2014: Wouter
	- svn trunk has 1.5.2 in development.
	- config.guess and config.sub update from libtoolize.
	- local-zone: example.com inform makes unbound log a message with
	  client IP for queries in that zone.  Eg. for finding infected hosts.

8 December 2014: Wouter
	- Fix CVE-2014-8602: denial of service by making resolver chase
	  endless series of delegations.

1 December 2014: Wouter
	- Fix bug#632: unbound fails to build on AArch64, protects
	  getentropy compat code from calling sysctl if it is has been removed.

29 November 2014: Wouter
	- Add include to getentropy_linux.c, hopefully fixing debian build.

28 November 2014: Wouter
	- Fix makefile for build from noexec source tree.

26 November 2014: Wouter
	- Fix libunbound undefined symbol errors for main.
	  Referencing main does not seem to be possible for libunbound.

24 November 2014: Wouter
	- Fix log at high verbosity and memory allocation failure.
	- iana portlist update.

21 November 2014: Wouter
	- Fix crash on multiple thread random usage on systems without
	  arc4random.

20 November 2014: Wouter
	- fix compat/getentropy_win.c check if CryptGenRandom works and no
	  immediate exit on windows.

19 November 2014: Wouter
	- Fix cdflag dns64 processing.

18 November 2014: Wouter
	- Fix that CD flag disables DNS64 processing, returning the DNSSEC
	  signed AAAA denial.
	- iana portlist update.

17 November 2014: Wouter
	- Fix #627: SSL_CTX_load_verify_locations return code not properly
	  checked.

14 November 2014: Wouter
	- parser with bison 2.7

13 November 2014: Wouter
	- Patch from Stephane Lapie for ASAHI Net that implements aaaa-filter,
	added to contrib/aaaa-filter-iterator.patch.

12 November 2014: Wouter
	- trunk has 1.5.1 in development.
	- Patch from Robert Edmonds to build pyunbound python module
	  differently.  No versioninfo, with -shared and without $(LIBS).
	- Patch from Robert Edmonds fixes hyphens in unbound-anchor man page.